Fixed the spacing of blocks #19

--- a/public/style.css
+++ b/public/style.css
@@ -98,6 +98,6 @@ h1, h2, h3, h4{
 .button-large{
   margin-top: 50px;
   font-size:110%;
-  margin-left: 40%
+  margin-left: 47%;
 
 }
